# ogc_geopose_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: Angles.msg  GeoPoseAdvanced.msg  GeoPoseBasicQuaternion.msg  GeoPoseBasicYPR.msg  GeoPoseBasicYPRStamped.msg  GeoPoseCompositeChain.msg  GeoPoseCompositeGraph.msg  GeoPoseCompositeSequenceSeriesIrregular.msg  GeoPoseCompositeSequenceSeriesRegular.msg  GeoPoseCompositeSequenceStream.msg  GeoPoseFrameAndTime.msg  GeoPoseFrameSpecification.msg  GeoPoseFrameTransformPair.msg  GeoPoseSeriesHeader.msg  GeoPoseSeriesTrailer.msg  GeoPoseStreamElement.msg  GeoPoseStreamHeader.msg  GeoPoseTransitionModel.msg  Position.msg
