<?xml version="1.0"?>
<package format="2">
  <name>geopose_msgs</name>
  <version>1.0.0</version>
  <description>The geopose_msgs package containing OGC GeoPose 1.0 definitions for ROS.</description>

  <maintainer email="james.clarke@os.uk">James Clarke</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/geopose</url> -->

  <author email="james.clarke@os.uk">James Clarke</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
