<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ogc_geopose_msgs</name>
  <version>1.0.0</version>
  <description>The geopose_msgs package containing OGC GeoPose 1.0 definitions for ROS.</description>

  <maintainer email="james.clarke@os.uk">James Clarke</maintainer>

  <license>Apache-2.0</license>

  <!-- <url type="website">http://wiki.ros.org/geopose</url> -->

  <author email="james.clarke@os.uk">James Clarke</author> 

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
